add svg sprite and webp part-2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,8 +71,8 @@
         <path fill="#111111" d="M119.8,15.1l-4.9-14.7h3l3.5,11l3.4-11h3l-4.9,14.7v8h-3V15.1z" />
       </g>
     </symbol>
-    <symbol id="logo">
-      <g class="header__logo-svg header__logo-svg--mini">
+    <symbol class="logo-svg" id="logo">
+      <g class="logo-svg__mini">
         <g>
           <path fill="#FDC305"
             d="M6.1,20.7l0.1-2.3c6.7-0.9,13.4-1.4,20.2-1.3c0,0.6,0,1.2-0.1,1.8c0,0,2.9-1.3,6-1.8    c-2.4-6.3-8.5-10.8-15.6-10.8c-8.3,0-15.2,6.1-16.5,14.1C2.4,20.5,6.1,20.7,6.1,20.7z" />
@@ -113,7 +113,7 @@
           <path fill="#444444" d="M94.3,11.6L90.4,0.2h2.3l2.7,8.5l2.7-8.5h2.3l-3.8,11.4v6.2h-2.4V11.6z" />
         </g>
       </g>
-      <g class="header__logo-svg header__logo-svg--medium">
+      <g class="logo-svg__medium">
         <path fill="#FDC305" d="M59.6,21.7C54.2,8.7,39.3,2.6,26.3,8S7.1,28.4,12.6,41.4c3.6,8.5,11.3,14.1,19.8,15.4c-0.6-2.1-1.2-4.4-1.7-6.8
                     c1.5,1,3.1,1.8,4.7,2.5c0,0,0,0,0,0c0,0,0.1,2.1,0.3,4.5c1.8,0,3.5-0.1,5.3-0.5c0-0.2,0-0.4,0-0.8c0.3-1.9,1.1-5.2,1.2-7.4
                     c1.1-1.1,2.1-2.3,2.9-3.7c0,0,0,0,0,0c0,0.1,0,0.3-0.1,0.4c-0.6,4.2-1.7,8.8-2.4,10c-0.2,0.4-0.5,0.9-0.8,1.1
@@ -177,7 +177,7 @@
           <path fill="#444444" d="M167.1,32.9l-3.2-9.6h1.9l2.3,7.2l2.2-7.2h2l-3.2,9.6v5.3h-2V32.9z" />
         </g>
       </g>
-      <g class="header__logo-svg header__logo-svg--big">
+      <g class="logo-svg__big">
         <path fill="#FDC305" d="M59.9,24c-5.5-13-20.5-19.2-33.5-13.8S7.2,30.7,12.6,43.7c3.6,8.6,11.3,14.2,19.9,15.5
                   c-0.6-2.1-1.2-4.4-1.7-6.9c1.5,1,3.1,1.8,4.8,2.6c0,0,0,0,0,0c0,0,0.1,2.2,0.3,4.6c1.8,0,3.6-0.1,5.3-0.5c0-0.2,0-0.4,0-0.8
                   c0.3-1.9,1.1-5.2,1.2-7.4c1.1-1.1,2.1-2.3,2.9-3.7c0,0,0,0,0,0c0,0.1,0,0.3-0.1,0.4c-0.6,4.3-1.7,8.8-2.4,10.1
@@ -256,13 +256,8 @@
         </g>
       </g>
     </symbol>
-    <symbol viewBox="0 0 134 56" id="cat-mass">
-      <path
-        d="M123.1 5.8c1.2-1.9 2.7-3.4 4.5-4.6 1-.7 1.6-.7 2.2.6.8 1.9 1.5 3.9.9 6-.2.8-.1 1.4.4 2.1.6.8 1.1 1.6 1.6 2.3 1.3 1.9 1.8 3.9.9 6.2-.4 1-.4 2-.2 3.1.2 1 .2 2 0 3-.3 1.6-1.1 2.7-2.7 3.2-1.3.3-2.4.9-3.2 2-.2.3-.5.5-.9.5-1.2.2-4.2-2.5-4.2-3.7v-.6c.1-3.6-.1-3.9-3.4-5.4-.7-.3-1.3-.6-1.8-1.2-.6-.8-1.4-.7-2.3-.4-.8.4-1.4.9-1.3 1.9.3 2.4.4 4.8.3 7.3 0 .3.1.6.2.8 3.1 4.5 4.3 9.8 5.8 14.9 1.2 3.9 3.4 6 7.4 6.3.6 0 1.3.2 1.9.3 1.8.3 2.9 1.5 3.4 3.2.7 2.1.3 2.6-1.8 2.6h-6.5c-.9 0-1.6-.2-2.3-.8-1-1-2.2-1.4-3.4-2-1.3-.6-2.6-1.3-3.4-2.6-1.1-1.7-2.6-3.1-4-4.5-2.8-2.9-5.8-5.7-8.4-8.7-1.9-2.2-3.2-4.6-3.2-7.6 0-.9-.2-1.3-1.2-.9-.3.2-.7.3-1 .3-2.8 0-4.2 1.7-5.2 4.2-.9 2.1-2.1 4.1-3.2 6.2-.5 1.1-1 2.6-1 4.2 0 2.4.6 3.2 2.8 4 1.4.5 2.7 1 3.4 2.4.8 1.6.6 2-1.1 2.1h-6.8c-.9 0-1.5-.3-1.9-1.1l-1.8-3c-1-1.7-1.4-3.4-.7-5.4.6-1.7.3-3.6.1-5.3-.4-2.6 0-4.9 1.7-7 .6-.7.6-1-.4-1.2-4.1-.8-8-2.3-11.8-4.1 0 0-.1 0-.1-.1-3.2-1.2-3.8-1-4.7 2.3-.8 2.8-1.6 5.6-2.2 8.5-.7 3.2.1 6.2 1.1 9.2.4 1.2 1.6 1.1 2.5 1.4 2 .6 3.7 1.4 4.5 3.5.7 1.6.6 1.8-1.1 1.8-1.7 0-3.4-.1-5.2 0-1.6.1-2.8-.5-4.2-1.4-4.8-3.2-6.2-8.1-6.6-13.4-.2-3.3-2-5.9-4.1-8.4-.4-.5-.8-.7-1.4-.3-2.1 1.3-4.5 2.1-6.7 3-4.8 1.8-9 4.6-12.2 8.8-1.2 1.5-1.9 3.2-2.2 5.1-.3 1.8.2 2.6 2 3.1 1.9.6 2.7 1.5 2.9 3.4.1.8-.2 1.2-1 1.2h-8.1c-.6 0-1-.4-1.3-.8-1.3-1.6-1.9-3.5-1.9-5.5-.1-3.5.3-6.9.9-10.3.4-2.1 1.4-3.8 3.4-4.8 5.9-2.8 9-8.1 11.8-13.6.6-1.1.1-1.3-.9-1.2-2.9.3-5.4 1.6-7.7 3.2-3 2.1-5.7 4.6-8.3 7.1-2.9 2.7-6.2 4.6-10.3 4.9C3.1 32.5-.3 28.4 0 21.8c.1-2.3.9-4.4 2.4-6.1 1.2-1.3 2.6-2 4.5-1.5 1.5.4 1.9 1.2 1.3 2.7-.3.6-.7 1.1-1 1.7-.4.6-.8 1.3-1 2-1.1 3 .4 5.1 3.5 5.4 3.3.3 6-1.1 8.5-3.1 3-2.4 5.7-5.2 8-8.3 3.7-4.8 8.5-7.3 14.4-8.1 2.3-.3 4.3-1.3 6.5-1.9 4.1-1.2 8.3-1.9 12.7-1.8 2 .1 3.9-.3 5.8-1.1 4.9-2 10-2 15.1-1 4 .8 8 1.8 11.9 2.8 2.2.5 4.7.3 7-.2 4.4-1 8.9-1.9 13.4-2 3-.1 5.9.4 8.6 1.7 2 .9 2 .9 1.5 2.8z" />
-    </symbol>
-    <symbol viewBox="0 0 70 97" id="cat-slim">
-      <path
-        d="M54.8 0h-.4c-.7.4-1.1.9-1.4 1.6-.6 1.1-1 2.3-1.3 3.4-.2.8-.7 1.2-1.5 1.3-2.3.4-4 1.7-5.2 3.7-.7 1.3-1.3 2.6-1.8 3.9-1.4 3.7-2.5 7.5-3.8 11.2-.7 1.9-.8 1.9-2.7 1.9-2.3 0-2.1-.4-2.1 2.1 0 .8.2 1.2 1.1 1.2.3 0 .7-.1.8.2.1.3-.2.5-.4.7-1.2 1.3-2.7 2-4.3 2.4-1.9.5-3.8.9-5.7 1.5-4.7 1.6-9.1 3.8-12.6 7.6-2.1 2.3-3.5 5-4.7 7.8-3.8 8.7-5.6 17.8-7 27-.6 4.3-1.1 8.6-1.5 13C.2 92.7 0 94.8 0 97h33.3c.1-.5-.1-.9-.2-1.3-.7-1.8-2.1-2.7-3.8-3.1-.7-.2-.8-.4-.4-.9.7-.9 1.2-2 1.6-3.1 1.6-4.8 2.3-9.8 3.1-14.8.6-3.8 1.5-7.4 3.4-10.8 1.5-2.5 3.3-4.6 5.6-6.4.8-.6.9-.6 1 .4.1.7.1 1.4.2 2.2.3 4.7.3 9.5-.2 14.2-.3 3.7-.5 7.4-.2 11 .4 4.3 1.2 8.4 2.2 12.6h13.3c-.3-2.2-2.1-4-4.2-4.4-1.3-.2-2.5-.1-3.8.2-.6.1-.8 0-.9-.6-.4-5.3-.1-10.6 1-15.8 1.3-6 2.4-12.1 3.1-18.2.3-2.5 1-4.8 2.3-7 1.2-2.1 2.2-4.3 3.4-6.5.9-1.7 1.1-3.4.4-5.2-.3-.7-.5-1.4-.9-2.1-1-2-2-3.9-2.9-5.9-.5-1-.4-1.1.7-1.1 1.6 0 1.6 0 1.7-1.6v-.7c0-.7-.3-1.1-1-1h-1.5c-.7 0-.9-.3-.7-1 .6-2.3 2.8-4.1 5.1-4.4 2.2-.3 4.4 0 6.6.4.6.1 1 0 1.3-.6.4-1 .8-2 1.3-3 .2-.4.2-.8-.1-1.1-3.2-4.2-6.7-8-11.4-10.4-.5-.3-.8-.6-.9-1.1-.3-1.4-.7-2.8-1.3-4.2-.3-.7-.6-1.3-1.4-1.7z" />
+    <symbol viewBox="0 0 55.5 60" id="gift">
+      <path fill="#fff" d="M52.3 12.2h-7c.5-.7.8-1.4 1.1-2.2.6-2 .4-4.1-.6-5.9-1-1.8-2.6-3.1-4.6-3.7-2-.6-4.1-.4-5.9.6-3.6 2-6.2 6.1-7.6 9-1.4-2.9-4-7.1-7.6-9-3.8-2-8.5-.6-10.5 3.1-1.4 2.7-1.2 5.8.5 8.1h-7c-1.7 0-3.1 1.4-3.1 3.1v9.4c0 1.7 1.4 3.1 3.1 3.1H4v26.1c0 3.3 2.7 6 6 6h35.5c3.3 0 6-2.7 6-6V27.8h.8c1.7 0 3.1-1.4 3.1-3.1v-9.4c.1-1.7-1.3-3.1-3.1-3.1zM36.5 3c1.3-.7 2.7-.8 4.1-.4 1.3.4 2.4 1.3 3.1 2.6.7 1.3.8 2.7.4 4.1-.4 1.2-1.1 2.2-2.2 2.9H29.4C30.5 9.6 33 5 36.5 3zM11.7 5.2C13.2 2.6 16.4 1.6 19 3c3.5 1.9 6 6.6 7.1 9.1H13.5c-2.3-1.4-3.1-4.5-1.8-6.9zm14.8 22.6v13.7H6.4V27.8h20.1zM6.4 53.9v-10h20.2v13.7H10c-2 0-3.6-1.7-3.6-3.7zm39.1 3.7H28.9V43.9h20.2v10c0 2-1.6 3.7-3.6 3.7zm3.6-16.1H28.9V27.8h20.2v13.7zm4-16.8c0 .4-.3.7-.7.7H3.2c-.4 0-.7-.3-.7-.7v-9.4c0-.4.3-.7.7-.7h49.2c.4 0 .7.3.7.7v9.4z" />
     </symbol>
   </svg>
 
@@ -691,7 +686,9 @@
           <section class="section-wrapper__special special">
 
             <h2 class="visually-hidden">Акция</h2>
-            <img class="special__ico" src="img/icon-gift.svg" width="56" height="61" alt="Подарок">
+            <svg class="special__ico" width="56" height="61">
+              <use xlink:href="#gift"></use>
+            </svg>
             <p class="special__text">
               Закажите все
               и&nbsp;получите чехол для кота в подарок!
@@ -722,6 +719,11 @@
       <div class="contacts__map">
         <div class="contacts__google-map"></div>
         <picture>
+          <source type="image/webp" media="(min-width: 1300px)"
+            srcset="img/webp/bg-map-desktop@1x.webp, img/webp/bg-map-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/webp/bg-map-tablet@1x.webp, img/webp/bg-map-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/webp/bg-map-mobile@1x.webp, img/webp/bg-map-mobile@2x.webp 2x">
           <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
           <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
