--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
 
     <div class="header__wrapper">
       <div class="header__inner">
-        <a href="index.html" class="header__logo">
+        <a href="index.html" class="header__logo" aria-label="Логотип Cat Energy, кот в костюме супергероя">
           <svg class="header__logo-ico" width="191" height="39">
             <use xlink:href="#logo-cat-energy"></use>
           </svg>
@@ -436,28 +436,28 @@
     <section class="footer-links">
 
       <div class="footer-links__wrapper container">
-        <a class="footer-links__logo" href="index.html">
+        <a class="footer-links__logo" href="index.html"  aria-label="Cat Energy">
           <svg class="footer-links__logo-image" width="128" height="24">
             <use xlink:href="#ico-logo-footer"></use>
           </svg>
         </a>
         <ul class="footer-links__social social">
           <li class="social__item">
-            <a class="social__link" href="https://vk.com">
+            <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
               <svg class="social__ico social__ico--vkontakte" width="22" height="12">
                 <use xlink:href="#icon-vk"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://www.instagram.com">
+            <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграм">
               <svg class="social__ico social__ico--instagram" width="23" height="23">
                 <use xlink:href="#icon-insta"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://www.facebook.com">
+            <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
               <svg class="social__ico social__ico--facebook" width="10" height="19">
                 <use xlink:href="#icon-fb"></use>
               </svg>
@@ -466,7 +466,7 @@
         </ul>
         <div class="footer-links__company-link company-link">
           <a class="company-link__text main-text" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a href="https://htmlacademy.ru/intensive/adaptive">
+          <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип Html Academy">
             <svg class="company-link__ico" width="27" height="34">
               <use xlink:href="#ico-htmlacademy"></use>
             </svg>
@@ -480,7 +480,7 @@
 
   <script src="js/picturefill.min.js"></script>
   <script src="js/ofi.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
   <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV4jlxcUZTr5NSO7sRpJ2ncW_itcauXBY&callback=initMap">
     </script>
 </body>
