--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -321,13 +323,13 @@
         <h2 class="section-wrapper__title title-decor">Дополнительные товары</h2>
         <div class="section-wrapper__inner">
 
-          <section class="аdditional-catalog">
+          <section class="section-wrapper__аdditional аdditional-catalog">
 
             <div class="аdditional-catalog__wrapper">
               <ul class="аdditional-catalog__list аdditional-list">
                 <li class="аdditional-list__item">
                   <article class="аdditional-list__item-content аdditional-product">
-                    <div class="additional-product__info-wrapper">
+                    <div class="аdditional-product__info-wrapper">
                       <h3 class="аdditional-product__title">Сахарозаменитель</h3>
                       <table class="аdditional-product__cost cost main-text">
                         <tr class="cost__wrapper">
@@ -341,7 +343,7 @@
                 </li>
                 <li class="аdditional-list__item">
                   <article class="аdditional-list__item-content аdditional-product">
-                    <div class="additional-product__info-wrapper">
+                    <div class="аdditional-product__info-wrapper">
                       <h3 class="аdditional-product__title">Питьевая вода</h3>
                       <table class="аdditional-product__cost cost main-text">
                         <tr class="cost__wrapper">
@@ -355,7 +357,7 @@
                 </li>
                 <li class="аdditional-list__item">
                   <article class="аdditional-list__item-content аdditional-product">
-                    <div class="additional-product__info-wrapper">
+                    <div class="аdditional-product__info-wrapper">
                       <h3 class="аdditional-product__title">Молоко</h3>
                       <table class="аdditional-product__cost cost  main-text">
                         <tr class="cost__wrapper">
@@ -369,7 +371,7 @@
                 </li>
                 <li class="аdditional-list__item">
                   <article class="аdditional-list__item-content аdditional-product">
-                    <div class="additional-product__info-wrapper">
+                    <div class="аdditional-product__info-wrapper">
                       <h3 class="аdditional-product__title">Витамины</h3>
                       <table class="аdditional-product__cost cost main-text">
                         <tr class="cost__wrapper">
