--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -74,7 +76,7 @@
           </fieldset>
           <fieldset class="form__set form__set--radio">
             <div class="form__inner">
-              <legend class="visually-hidden">Программа питания</legend>
+              <div class="visually-hidden">Программа питания</div>
               <ul class="form__radio-list form-list">
                 <li class="form__program-item form-list__item">
                   <input class="form__program-radio visually-hidden" type="radio" name="program-feed" value="slim" id="program-slim" checked="">
